[FIXES-1] Fixed spacing issue in about group popup

--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/groups-single/_group-common.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/groups-single/_group-common.scss
@@ -327,6 +327,7 @@
 
 		.list-meta {
 			display: flex;
+			gap: var(--bb-rl-space-50);
 			align-items: center;
 			color: var(--bb-rl-text-tertiary-color);
 
